@@ -1,6 +1,7 @@
 filters
 (* Define filter functions (backward compatibility) *)
-let A = try A with X
+
+let A = (try X with 0)|(try A with 0)
 let P = M \ A
 
 let WW(r) = r & (W * W)
@@ -16,6 +17,10 @@ and AA(r) = r & (A * A)
 and AP(r) = r & (A * P)
 and PA(r) = r & (P * A)
 and PP(r) = r * (P * P)
+and AM(r) = r & (A * M)
+and MA(r) = r & (M * A)
 
 let noid(r)= r \ id
 let invrf = rf^-1
+
+let atom = [A]
